openmm-sys/src/lib.rs

pub const OpenMM_CustomManyParticleForce_NonbondedMethod_OpenMM_CustomManyParticleForce_NoCutoff:
    OpenMM_CustomManyParticleForce_NonbondedMethod = 0;
pub const OpenMM_CustomManyParticleForce_NonbondedMethod_OpenMM_CustomManyParticleForce_CutoffNonPeriodic : OpenMM_CustomManyParticleForce_NonbondedMethod = 1 ;
pub const OpenMM_CustomManyParticleForce_NonbondedMethod_OpenMM_CustomManyParticleForce_CutoffPeriodic : OpenMM_CustomManyParticleForce_NonbondedMethod = 2 ;
pub type OpenMM_CustomManyParticleForce_NonbondedMethod = u32;
pub const OpenMM_CustomManyParticleForce_PermutationMode_OpenMM_CustomManyParticleForce_SinglePermutation : OpenMM_CustomManyParticleForce_PermutationMode = 0 ;
pub const OpenMM_CustomManyParticleForce_PermutationMode_OpenMM_CustomManyParticleForce_UniqueCentralParticle : OpenMM_CustomManyParticleForce_PermutationMode = 1 ;
pub type OpenMM_CustomManyParticleForce_PermutationMode = u32;
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_create(
        particlesPerSet: ::std::os::raw::c_int,
        energy: *const ::std::os::raw::c_char,
    ) -> *mut OpenMM_CustomManyParticleForce;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_destroy(target: *mut OpenMM_CustomManyParticleForce);
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_getNumParticlesPerSet(
        target: *const OpenMM_CustomManyParticleForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_getNumParticles(
        target: *const OpenMM_CustomManyParticleForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_getNumExclusions(
        target: *const OpenMM_CustomManyParticleForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_getNumPerParticleParameters(
        target: *const OpenMM_CustomManyParticleForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_getNumGlobalParameters(
        target: *const OpenMM_CustomManyParticleForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_getNumTabulatedFunctions(
        target: *const OpenMM_CustomManyParticleForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_getEnergyFunction(
        target: *const OpenMM_CustomManyParticleForce,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_setEnergyFunction(
        target: *mut OpenMM_CustomManyParticleForce,
        energy: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_getNonbondedMethod(
        target: *const OpenMM_CustomManyParticleForce,
    ) -> OpenMM_CustomManyParticleForce_NonbondedMethod;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_setNonbondedMethod(
        target: *mut OpenMM_CustomManyParticleForce,
        method: OpenMM_CustomManyParticleForce_NonbondedMethod,
    );
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_getPermutationMode(
        target: *const OpenMM_CustomManyParticleForce,
    ) -> OpenMM_CustomManyParticleForce_PermutationMode;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_setPermutationMode(
        target: *mut OpenMM_CustomManyParticleForce,
        mode: OpenMM_CustomManyParticleForce_PermutationMode,
    );
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_getCutoffDistance(
        target: *const OpenMM_CustomManyParticleForce,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_setCutoffDistance(
        target: *mut OpenMM_CustomManyParticleForce,
        distance: f64,
    );
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_addPerParticleParameter(
        target: *mut OpenMM_CustomManyParticleForce,
        name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_getPerParticleParameterName(
        target: *const OpenMM_CustomManyParticleForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_setPerParticleParameterName(
        target: *mut OpenMM_CustomManyParticleForce,
        index: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_addGlobalParameter(
        target: *mut OpenMM_CustomManyParticleForce,
        name: *const ::std::os::raw::c_char,
        defaultValue: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_getGlobalParameterName(
        target: *const OpenMM_CustomManyParticleForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_setGlobalParameterName(
        target: *mut OpenMM_CustomManyParticleForce,
        index: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_getGlobalParameterDefaultValue(
        target: *const OpenMM_CustomManyParticleForce,
        index: ::std::os::raw::c_int,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_setGlobalParameterDefaultValue(
        target: *mut OpenMM_CustomManyParticleForce,
        index: ::std::os::raw::c_int,
        defaultValue: f64,
    );
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_addParticle(
        target: *mut OpenMM_CustomManyParticleForce,
        parameters: *const OpenMM_DoubleArray,
        type_: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_getParticleParameters(
        target: *const OpenMM_CustomManyParticleForce,
        index: ::std::os::raw::c_int,
        parameters: *mut OpenMM_DoubleArray,
        type_: *mut ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_setParticleParameters(
        target: *mut OpenMM_CustomManyParticleForce,
        index: ::std::os::raw::c_int,
        parameters: *const OpenMM_DoubleArray,
        type_: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_addExclusion(
        target: *mut OpenMM_CustomManyParticleForce,
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_getExclusionParticles(
        target: *const OpenMM_CustomManyParticleForce,
        index: ::std::os::raw::c_int,
        particle1: *mut ::std::os::raw::c_int,
        particle2: *mut ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_setExclusionParticles(
        target: *mut OpenMM_CustomManyParticleForce,
        index: ::std::os::raw::c_int,
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_createExclusionsFromBonds(
        target: *mut OpenMM_CustomManyParticleForce,
        bonds: *const OpenMM_BondArray,
        bondCutoff: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_getTypeFilter(
        target: *const OpenMM_CustomManyParticleForce,
        index: ::std::os::raw::c_int,
        types: *mut OpenMM_IntSet,
    );
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_setTypeFilter(
        target: *mut OpenMM_CustomManyParticleForce,
        index: ::std::os::raw::c_int,
        types: *const OpenMM_IntSet,
    );
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_addTabulatedFunction(
        target: *mut OpenMM_CustomManyParticleForce,
        name: *const ::std::os::raw::c_char,
        function: *mut OpenMM_TabulatedFunction,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_getTabulatedFunction(
        target: *mut OpenMM_CustomManyParticleForce,
        index: ::std::os::raw::c_int,
    ) -> *mut OpenMM_TabulatedFunction;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_getTabulatedFunctionName(
        target: *const OpenMM_CustomManyParticleForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_updateParametersInContext(
        target: *mut OpenMM_CustomManyParticleForce,
        context: *mut OpenMM_Context,
    );
}
extern "C" {
    pub fn OpenMM_CustomManyParticleForce_usesPeriodicBoundaryConditions(
        target: *const OpenMM_CustomManyParticleForce,
    ) -> OpenMM_Boolean;
}
extern "C" {
    pub fn OpenMM_Integrator_destroy(target: *mut OpenMM_Integrator);
}
extern "C" {
    pub fn OpenMM_Integrator_getStepSize(target: *const OpenMM_Integrator) -> f64;
}
extern "C" {
    pub fn OpenMM_Integrator_setStepSize(target: *mut OpenMM_Integrator, size: f64);
}
extern "C" {
    pub fn OpenMM_Integrator_getConstraintTolerance(target: *const OpenMM_Integrator) -> f64;
}
extern "C" {
    pub fn OpenMM_Integrator_setConstraintTolerance(target: *mut OpenMM_Integrator, tol: f64);
}
extern "C" {
    pub fn OpenMM_Integrator_step(target: *mut OpenMM_Integrator, steps: ::std::os::raw::c_int);
}
extern "C" {
    pub fn OpenMM_VariableVerletIntegrator_create(
        errorTol: f64,
    ) -> *mut OpenMM_VariableVerletIntegrator;
}
extern "C" {
    pub fn OpenMM_VariableVerletIntegrator_destroy(target: *mut OpenMM_VariableVerletIntegrator);
}
extern "C" {
    pub fn OpenMM_VariableVerletIntegrator_getErrorTolerance(
        target: *const OpenMM_VariableVerletIntegrator,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_VariableVerletIntegrator_setErrorTolerance(
        target: *mut OpenMM_VariableVerletIntegrator,
        tol: f64,
    );
}
extern "C" {
    pub fn OpenMM_VariableVerletIntegrator_step(
        target: *mut OpenMM_VariableVerletIntegrator,
        steps: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_VariableVerletIntegrator_stepTo(
        target: *mut OpenMM_VariableVerletIntegrator,
        time: f64,
    );
}
pub const OpenMM_MonteCarloMembraneBarostat_XYMode_OpenMM_MonteCarloMembraneBarostat_XYIsotropic:
    OpenMM_MonteCarloMembraneBarostat_XYMode = 0;
pub const OpenMM_MonteCarloMembraneBarostat_XYMode_OpenMM_MonteCarloMembraneBarostat_XYAnisotropic : OpenMM_MonteCarloMembraneBarostat_XYMode = 1 ;
pub type OpenMM_MonteCarloMembraneBarostat_XYMode = u32;
pub const OpenMM_MonteCarloMembraneBarostat_ZMode_OpenMM_MonteCarloMembraneBarostat_ZFree:
    OpenMM_MonteCarloMembraneBarostat_ZMode = 0;
pub const OpenMM_MonteCarloMembraneBarostat_ZMode_OpenMM_MonteCarloMembraneBarostat_ZFixed:
    OpenMM_MonteCarloMembraneBarostat_ZMode = 1;
pub const OpenMM_MonteCarloMembraneBarostat_ZMode_OpenMM_MonteCarloMembraneBarostat_ConstantVolume : OpenMM_MonteCarloMembraneBarostat_ZMode = 2 ;
pub type OpenMM_MonteCarloMembraneBarostat_ZMode = u32;
extern "C" {
    pub fn OpenMM_MonteCarloMembraneBarostat_create(
        defaultPressure: f64,
        defaultSurfaceTension: f64,
        defaultTemperature: f64,
        xymode: OpenMM_MonteCarloMembraneBarostat_XYMode,
        zmode: OpenMM_MonteCarloMembraneBarostat_ZMode,
        frequency: ::std::os::raw::c_int,
    ) -> *mut OpenMM_MonteCarloMembraneBarostat;
}
extern "C" {
    pub fn OpenMM_MonteCarloMembraneBarostat_destroy(
        target: *mut OpenMM_MonteCarloMembraneBarostat,
    );
}
extern "C" {
    pub fn OpenMM_MonteCarloMembraneBarostat_Pressure() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_MonteCarloMembraneBarostat_SurfaceTension() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_MonteCarloMembraneBarostat_Temperature() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_MonteCarloMembraneBarostat_getDefaultPressure(
        target: *const OpenMM_MonteCarloMembraneBarostat,
    ) -> f64;
}
